Update files to work with gmail API

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Email credentials
-EMAIL_PASSWORD=your_email_password
+EMAIL_PASSWORD=****
 
 # Twilio credentials (for SMS and WhatsApp)
 TWILIO_ACCOUNT_SID=your_twilio_sid
